<resources>
    <string name="app_name">Pets Сalendar</string>
    <string name="add_event">Add event</string>
    <string name="show_events">Show events</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="month">Month</string>
    <string name="comment">Comment</string>
    <string name="event_title">Event title</string>
    <string name="dog_avatar">Photo</string>
    <string name="download_img"><![CDATA[<-]]></string>
    <string name="date">Date</string>
    <string name="pet_info">Pet information</string>
    <string name="show_nearest_events">Show nearest events</string>
    <string name="breed">Breed</string>
    <string name="color">Coat color</string>
    <string name="tattoo_number">Tattoo number</string>
    <string name="microchip_number">Microchip number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Nickname</string>
    <string name="birthday_format">Date of birth   dd.mm.YYYY</string>
    <string name="birthday">Date of birth</string>
    <string name="gender">Gender</string>
    <!-- Strings used for fragments for navigation -->
    <string name="content_description_of_image_in_header">Add photo</string>
    <!-- Strings used for notifications in code-->
    <string name="sex_notification">Choose gender </string>
    <string name="name_notification">Enter nickname</string>
    <string name="birthday_notification">Enter date of birth</string>
    <string name="date_notification">Select a date</string>
    <string name="incorrect_date_notification">Enter an existing date</string>
    <!-- Strings used for events notification in code -->
    <string name="empty_events_list_this_day">There are no events on this day</string>
    <string name="empty_events_list_this_month">There are no events on this month</string>
    <!-- Strings used for event details -->
    <string name="never">One time event</string>
    <string name="every_day">Every day</string>
    <string name="every_month">Every month</string>
    <string name="every_three_months">Every 3 months</string>
    <string name="every_year">Every year</string>
    <string name="exception_regularity">Exception regularity</string>

    <string name="rabies_vaccination">Rabies vaccination</string>
    <string name="tick_pill">Tick pill</string>
    <string name="tick_spray">Tick spray</string>
    <string name="worm_pill">Worm pill</string>
    <string name="buying_food">Order food</string>
    <string name="exception_type">Exception type</string>

    <string name="events_on_date">Events on %1$s</string>
    <string name="events_saved">Event %1$s saved %2$s</string>
    <string name="event_deleted">This event is already deleted, press update</string>
    <string name="event_deleted_update">Event deleted, press update</string>
    <string name="event_changed_update">Event changed, press update</string>
    <string name="incorrect_expired_date">Check the expiration date</string>
    <string name="early_expired_date">Expiration date should be later then current event</string>
    <string name="expired_date_hint">Until </string>
    <string name="every_day_since">Every day since </string>
    <string name="no_expiration_date">No expiration date</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="update">Update</string>

</resources>